update client and server application